Fix ID reference for font size and add Google Fonts link

--- a/CSS/6.1+Font+Properties/index.html
+++ b/CSS/6.1+Font+Properties/index.html
@@ -16,7 +16,7 @@
     #coral {
       color : coral;
     }
-    #font-size {
+    #fontsize {
       font-size : 2rem;
     }
     #font-weight  {
@@ -55,6 +55,9 @@
   Link: https://fonts.google.com/specimen/Caveat
   5. Change the <p>Text Align</p> to right align.
   6. Change the the root (html element) font size to 30px -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 </body>
 
 </html>
